# KERAG-Web

./: README.md  README.zh.md  launch.py  pyproject.toml
backend/: LICENSE  pyproject.toml  start.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: modules.py  nodes.py  search.py  settings.py  status.py
backend/app/core/: kerag_client.py
backend/app/schemas/: __init__.py  responses.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts
frontend/src/components/: Breadcrumb.vue  ContentView.vue  FormatSelector.vue  MarkdownRenderer.vue  ModuleList.vue  NodeTree.vue  SearchBar.vue  SettingsButton.vue  SettingsModal.vue  TreeNode.vue
frontend/src/locales/: en.json  index.ts  zh.json
frontend/src/stores/: app.ts  settings.ts
frontend/src/types/: index.ts  katex.d.ts  markdown-it-katex.d.ts
