[project]
name = "kerag-web"
version = "0.1.0"
description = "Web Interface for KERAG Knowledge Base"
authors = [
    { name = "Tong", email = "TongWang_2000@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "kerag>=0.1.0",
    "python-multipart",
    "pyyaml"
]

[project.scripts]
kerag-web = "kerag_web.start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.wheel.sources]
"backend" = "kerag_web"

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "kerag_web/dist"

[tool.uv.sources]
kerag = { git = "https://github.com/TongWang-AI4S/KERAG.git" }
